--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.10"
 Flask = "^2.3.2"
 pandas = "^2.0.2"
+pip = "23.1.2"
+tqdm = "4.65.0"
+ta-lib-bin = "0.4.26"
 
 [tool.poetry.dev-dependencies]
 
